// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "borderTopColor": "#C7CDD1",
          "borderTopWidth": 0.5,
          "paddingBottom": 16,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Object {
                  "color": "#556572",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "paddingTop": 2,
                },
              ]
            }
            testID="undefined-title-lbl"
          >
            foo
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`render first row 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        undefined,
      ]
    }
  >
    <View
      style={Object {}}
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 4,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`render no title 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "borderTopColor": "#C7CDD1",
          "borderTopWidth": 0.5,
          "paddingBottom": 16,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessible={false}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 4,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
